--- a/servicos/compra/index.html
+++ b/servicos/compra/index.html
@@ -1,123 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Finalizar Serviço</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link rel="stylesheet" href="./compra.css" />
+  <meta charset="UTF-8">
+  <title>Finalizar Pedido | J L Serviços Contábeis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
+  <link rel="stylesheet" href="./compra.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-  <body>
+<body>
 
-<main class="container">
+  <header class="category-header" style="padding: 30px 0; background: #0b1c2d; text-align: center;">
+    <div class="container">
+      <a href="../../index.html" style="font-family: 'Montserrat', sans-serif; font-size: 1.8rem; font-weight: 700; color: #fff; text-decoration: none; display: block; margin-bottom: 20px;">J L Serviços Contábeis</a>
+      <nav>
+        <ul style="display: flex; justify-content: center; list-style: none; gap: 30px; padding: 0;">
+          <li><a href="../../index.html" style="color: #fff; text-decoration: none; font-weight: 700; text-transform: uppercase; font-size: 0.9rem;">Início</a></li>
+          <li><a href="../../blog/index.html" style="color: #fff; text-decoration: none; font-weight: 700; text-transform: uppercase; font-size: 0.9rem;">Blog</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- BREADCRUMB DINÂMICO -->
-  <nav class="breadcrumb" id="breadcrumb"></nav>
+  <main class="container content-wrapper">
+    <nav class="breadcrumb-custom" id="breadcrumb" style="margin: 40px 0; font-size: 0.9rem; color: rgba(255,255,255,0.6); font-family: 'Montserrat', sans-serif;">
+      </nav>
 
-  <h1 class="titulo-servico" id="nomeServico">
-    Serviço
-  </h1>
+    <h1 class="page-title" id="nomeServico">Finalizar Serviço</h1>
 
-  <div class="grid">
+    <div class="compra-grid">
+      <div class="service-summary-card">
+        <h2 class="section-subtitle">Resumo do Serviço</h2>
+        <p class="service-desc" id="descricaoServico">Carregando detalhes...</p>
+        
+        <ul class="inclusos-list" id="inclusosServico">
+          </ul>
 
-    <!-- CARD ESQUERDO -->
-    <div class="card">
-      <h2>Resumo do Serviço</h2>
+        <div class="price-box">
+          <span>Valor do Investimento:</span>
+          <strong id="valorServico">...</strong>
+        </div>
+      </div>
 
-      <p class="descricao" id="descricaoServico">
-        Descrição do serviço.
-      </p>
+      <div class="form-card">
+        <h2 class="section-subtitle">Dados do Cliente</h2>
+        <form id="pedidoForm">
+          <div class="input-group">
+            <i class="fas fa-user"></i>
+            <input type="text" id="nome" placeholder="Nome completo *" required>
+          </div>
 
-      <ul id="inclusosServico"></ul>
+          <div class="input-group">
+            <i class="fas fa-envelope"></i>
+            <input type="email" id="email" placeholder="E-mail *" required>
+          </div>
 
-      <div class="valor">
-        Valor:
-        <strong id="valorServico">A definir</strong>
+          <div class="row-inputs">
+            <div class="input-group">
+              <i class="fab fa-whatsapp"></i>
+              <input type="text" id="whatsapp" placeholder="WhatsApp (DDD) *" required>
+            </div>
+            <div class="input-group">
+              <i class="fas fa-id-card"></i>
+              <input type="text" id="cpf" placeholder="CPF *" required>
+            </div>
+          </div>
+
+          <textarea id="observacoes" placeholder="Observações ou dúvidas adicionais (opcional)"></textarea>
+
+          <button type="submit" disabled id="btnEnviar" class="btn-checkout">
+            <span>Confirmar e Enviar via WhatsApp</span>
+            <i class="fab fa-whatsapp"></i>
+          </button>
+        </form>
       </div>
     </div>
+  </main>
 
-    <!-- CARD DIREITO -->
-    <div class="card">
-      <h2>Dados do Cliente</h2>
-
-      <form id="pedidoForm">
-
-        <input
-          type="text"
-          id="nome"
-          placeholder="Nome completo *"
-          required
-        />
-
-        <input
-          type="email"
-          id="email"
-          placeholder="E-mail *"
-          required
-        />
-
-        <input
-          type="text"
-          id="whatsapp"
-          placeholder="WhatsApp *"
-          required
-        />
-
-        <input
-          type="text"
-          id="cpf"
-          placeholder="CPF *"
-          required
-        />
-
-        <textarea
-          id="observacoes"
-          placeholder="Observações (opcional)">
-        </textarea>
-
-        <button type="submit" disabled id="btnEnviar">
-          Enviar Pedido
-        </button>
-
-      </form>
+  <footer class="site-footer">
+    <div class="footer-container container">
+      <div class="footer-col">
+        <h3>J L Serviços Contábeis</h3>
+        <p>Soluções contábeis com transparência e foco em resultados.</p>
+      </div>
+      <div class="footer-col">
+        <h4>Contato</h4>
+        <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
+      </div>
     </div>
-
-  </div>
-
-</main>
-
-<footer class="site-footer">
-  <div class="footer-container container">
-    <div class="footer-col">
-      <h3>J L Serviços Contábeis</h3>
-      <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
+    <div class="footer-bottom">
+      <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
     </div>
+  </footer>
 
-    <div class="footer-col">
-      <h4>Links Rápidos</h4>
-      <ul>
-        <li><a href="../../index.html">Início</a></li>
-        <li><a href="../../index.html#servicos">Serviços</a></li>
-        <li><a href="../../sobre/index.html">Quem Somos</a></li>
-        <li><a href="../../lgpd/index.html">Política de Privacidade</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Contato</h4>
-      <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
-        Falar no WhatsApp
-      </a>
-      <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
-  </div>
-</footer>
-
-<script src="./compra.js"></script>
+  <script src="./compra.js"></script>
 </body>
 </html>
