--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -60,29 +60,39 @@
         </a>
     </div>
 
-    <div style="display: flex; gap: 30px; flex-wrap: wrap; justify-content: center;">
-        <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5);">
-            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
-            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px;">R$ 99,99/mês</p>
-            <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2;">
-                <li>✔ Emissão mensal do DAS</li>
-                <li>✔ Lembretes de vencimento</li>
-                <li>✔ DASN-SIMEI Inclusa</li>
-                <li>✔ Suporte via WhatsApp</li>
-            </ul>
-        </div>
-        <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1);">
-            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
-            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px;">R$ 159,99/mês</p>
-            <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2;">
-                <li>✔ Tudo do Plano Básico</li>
-                <li>✔ Parcelamentos de débitos</li>
-                <li>✔ Emissão de certidões mensais</li>
-                <li>✔ Suporte Prioritário</li>
-                <li>✔ 20% desconto em serviços avulsos</li>
-            </ul>
-        </div>
+    <div style="display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; margin: 40px 0;">
+    <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5); display: flex; flex-direction: column;">
+        <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
+        <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 99,99/mês</p>
+        <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
+            <li>✔ Emissão mensal do DAS</li>
+            <li>✔ Lembretes de vencimento</li>
+            <li>✔ DASN-SIMEI Inclusa</li>
+            <li>✔ Suporte via WhatsApp</li>
+        </ul>
+        <a href="../compra/?categoria=mei&servico=basico" 
+           style="margin-top: auto; background: #bd9617; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
+           Contratar Plano Básico
+        </a>
     </div>
+
+    <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1); display: flex; flex-direction: column; position: relative;">
+        <div style="position: absolute; top: -12px; right: 20px; background: #bd9617; color: #0b1c2d; padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: 800; text-transform: uppercase;">Mais Completo</div>
+        <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
+        <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 159,99/mês</p>
+        <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
+            <li>✔ Tudo do Plano Básico</li>
+            <li>✔ Parcelamentos de débitos</li>
+            <li>✔ Emissão de certidões mensais</li>
+            <li>✔ Suporte Prioritário</li>
+            <li>✔ 20% desconto em serviços avulsos</li>
+        </ul>
+        <a href="../compra/?categoria=mei&servico=premium" 
+           style="margin-top: auto; background: #25D366; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
+           Contratar Plano Premium
+        </a>
+    </div>
+</div>
 </main>
 
 <footer class="site-footer">
