--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -6,7 +6,18 @@
   <title>Serviços para MEI | J L Serviços Contábeis</title>
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="./mei.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    /* Ajuste para garantir que os cards de serviços avulsos tenham efeito hover */
+    .service-link-card {
+        transition: transform 0.3s ease, border-color 0.3s ease;
+    }
+    .service-link-card:hover {
+        transform: translateY(-5px);
+        border-color: #bd9617 !important;
+        background: #113155 !important;
+    }
+  </style>
 </head>
 <body>
 
@@ -26,105 +37,112 @@
     <a href="../../index.html">Início</a> / <span>Serviços</span> / <strong>MEI</strong>
   </nav>
 
-<main class="container" style="padding: 40px 0;">
-    <h1 style="color:#bd9617; text-align:center; margin-bottom:40px;">SERVIÇOS PARA MEI</h1>
+  <main class="container" style="padding: 40px 0;">
+    <h1 style="color:#bd9617; text-align:center; margin-bottom:40px; font-family: 'Playfair Display', serif;">SERVIÇOS PARA MEI</h1>
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 15px; margin-bottom: 60px;">
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Abertura de MEI</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 148,99</p>
+        
+        <a href="../compra/?categoria=mei&servico=abertura-mei" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Abertura de MEI</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 148,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Regularização</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 198,99</p>
+
+        <a href="../compra/?categoria=mei&servico=regularizacao-mei" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Regularização</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 198,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Baixa de MEI</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 128,99</p>
+
+        <a href="../compra/?categoria=mei&servico=–-mei" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Baixa de MEI</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 128,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Emissão DAS</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 48,99</p>
+
+        <a href="../compra/?categoria=mei&servico=emissao-das" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Emissão DAS</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 48,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">DASN (Anual)</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 98,99</p>
+
+        <a href="../compra/?categoria=mei&servico=dasn" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">DASN (Anual)</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 98,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Parcelamento</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 178,99</p>
+
+        <a href="../compra/?categoria=mei&servico=parcelamento" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Parcelamento</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 178,99</p>
         </a>
-        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
-            <p style="color:#fff; font-weight:600;">Alteração</p>
-            <p style="color:#bd9617; font-weight:800;">R$ 78,99</p>
+
+        <a href="../compra/?categoria=mei&servico=alteracao-mei" class="service-link-card" style="background:#0e2a47; padding:25px 20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600; margin-bottom: 10px;">Alteração</p>
+            <p style="color:#bd9617; font-weight:800; font-size: 1.2rem;">R$ 78,99</p>
         </a>
     </div>
 
     <div style="display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; margin: 40px 0;">
-    <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5); display: flex; flex-direction: column;">
-        <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
-        <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 99,99/mês</p>
-        <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
-            <li>✔ Emissão mensal do DAS</li>
-            <li>✔ Lembretes de vencimento</li>
-            <li>✔ DASN-SIMEI Inclusa</li>
-            <li>✔ Suporte via WhatsApp</li>
+        <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5); display: flex; flex-direction: column;">
+            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
+            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 99,99/mês</p>
+            <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
+                <li>✔ Emissão mensal do DAS</li>
+                <li>✔ Lembretes de vencimento</li>
+                <li>✔ DASN-SIMEI Inclusa</li>
+                <li>✔ Suporte via WhatsApp</li>
+            </ul>
+            <a href="../compra/?categoria=mei&servico=basico" 
+               style="margin-top: auto; background: #bd9617; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
+               Contratar Plano Básico
+            </a>
+        </div>
+
+        <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1); display: flex; flex-direction: column; position: relative;">
+            <div style="position: absolute; top: -12px; right: 20px; background: #bd9617; color: #0b1c2d; padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: 800; text-transform: uppercase;">Mais Completo</div>
+            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
+            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 159,99/mês</p>
+            <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
+                <li>✔ Tudo do Plano Básico</li>
+                <li>✔ Parcelamentos de débitos</li>
+                <li>✔ Emissão de certidões mensais</li>
+                <li>✔ Suporte Prioritário</li>
+                <li>✔ 20% desconto em serviços avulsos</li>
+            </ul>
+            <a href="../compra/?categoria=mei&servico=premium" 
+               style="margin-top: auto; background: #25D366; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
+               Contratar Plano Premium
+            </a>
+        </div>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-container container">
+      <div class="footer-col">
+        <h3>J L Serviços Contábeis</h3>
+        <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
+      </div>
+
+      <div class="footer-col">
+        <h4>Links Rápidos</h4>
+        <ul>
+          <li><a href="../../index.html">Início</a></li>
+          <li><a href="../../index.html#servicos">Serviços</a></li>
+          <li><a href="../../sobre/index.html">Quem Somos</a></li>
+          <li><a href="../../lgpd/index.html">Política de Privacidade</a></li>
         </ul>
-        <a href="../compra/?categoria=mei&servico=basico" 
-           style="margin-top: auto; background: #bd9617; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
-           Contratar Plano Básico
+      </div>
+
+      <div class="footer-col">
+        <h4>Contato</h4>
+        <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
+          Falar no WhatsApp
         </a>
+        <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
+      </div>
     </div>
 
-    <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1); display: flex; flex-direction: column; position: relative;">
-        <div style="position: absolute; top: -12px; right: 20px; background: #bd9617; color: #0b1c2d; padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: 800; text-transform: uppercase;">Mais Completo</div>
-        <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
-        <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 159,99/mês</p>
-        <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
-            <li>✔ Tudo do Plano Básico</li>
-            <li>✔ Parcelamentos de débitos</li>
-            <li>✔ Emissão de certidões mensais</li>
-            <li>✔ Suporte Prioritário</li>
-            <li>✔ 20% desconto em serviços avulsos</li>
-        </ul>
-        <a href="../compra/?categoria=mei&servico=premium" 
-           style="margin-top: auto; background: #25D366; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase;">
-           Contratar Plano Premium
-        </a>
+    <div class="footer-bottom">
+      <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
     </div>
-</div>
-</main>
-
-<footer class="site-footer">
-  <div class="footer-container container">
-    <div class="footer-col">
-      <h3>J L Serviços Contábeis</h3>
-      <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
-    </div>
-
-    <div class="footer-col">
-      <h4>Links Rápidos</h4>
-      <ul>
-        <li><a href="../../index.html">Início</a></li>
-        <li><a href="../../index.html#servicos">Serviços</a></li>
-        <li><a href="../../sobre/index.html">Quem Somos</a></li>
-        <li><a href="../../lgpd/index.html">Política de Privacidade</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Contato</h4>
-      <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
-        Falar no WhatsApp
-      </a>
-      <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
-  </div>
-</footer>
+  </footer>
 
   <script src="./mei.js"></script>
 </body>
