--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -24,7 +24,11 @@
   </header>
 
   <nav class="breadcrumb container">
-    <a href="../../index.html">Início</a> / <span>Serviços</span> / <strong>Certificado Digital</strong>
+    <a href="/jl-servicos-contabeis/">Início</a>
+    <span>›</span>
+    <a href="/jl-servicos-contabeis/">Serviços</a>
+    <span>›</span> 
+    <strong>Certificado Digital</strong>
   </nav>
 
   <main class="container certificado-page">
