--- a/servicos/compra/index.html
+++ b/servicos/compra/index.html
@@ -28,18 +28,17 @@
 
 <body>
 
-<header class="category-header" style="padding: 30px 0; background: #0b1c2d; text-align: center; border-bottom: 1px solid rgba(189, 150, 23, 0.2);">
-  <div class="container">
-    <a href="../index.html" style="font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: 700; color: #bd9617; text-decoration: none; display: block; margin-bottom: 20px;">J L Serviços Contábeis</a>
-    <nav>
-      <ul style="display: flex; justify-content: center; list-style: none; gap: 30px; padding: 0;">
-        <li class="menu-item"><a href="../index.html">Início</a></li>
-        <li class="menu-item"><a href="../servicos/index.html">Serviços</a></li>
-        <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  <header class="site-header">
+    <div class="container header-top">
+      <h1 class="site-title" style="font-size: 1.5rem;">J L Serviços Contábeis</h1>
+      <nav class="main-nav">
+        <ul class="menu">
+          <li class="menu-item"><a href="../../index.html">Início</a></li>
+          <li class="menu-item"><a href="../../blog/index.html">Blog</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 <main class="container content-wrapper">
   <nav class="breadcrumb-custom" id="breadcrumb" style="margin: 40px 0; font-size: 0.9rem; color: rgba(255,255,255,0.6); font-family: 'Montserrat', sans-serif;">
