--- a/servicos/compra/index.html
+++ b/servicos/compra/index.html
@@ -29,16 +29,17 @@
 <body>
 
 <header class="site-header">
-  <div class="container header-top" style="display: flex; align-items: center; justify-content: space-between; padding: 25px 0;">
-    <h1 class="site-title" style="font-size: 1.5rem; margin: 0;">J L Serviços Contábeis</h1>
-    <nav class="main-nav" style="flex-grow: 1; display: flex; justify-content: center;">
-      <ul class="menu" style="display: flex; gap: 30px; list-style: none; margin: 0; padding: 0;">
+  <div class="container header-top">
+    <h1 class="site-title">J L Serviços Contábeis</h1>
+    
+    <nav class="main-nav">
+      <ul class="menu">
         <li class="menu-item"><a href="../index.html">Início</a></li>
         <li class="menu-item"><a href="../servicos/index.html">Serviços</a></li>
         <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
       </ul>
     </nav>
-    <div style="width: 200px;" class="header-spacer-hidden"></div>
+    <div class="header-spacer-hidden"></div>
   </div>
 </header>
 
