--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body class="home-page">
 <header class="site-header">
   <div class="container header-content"> 
     <div class="brand-identity">
@@ -148,5 +148,5 @@
 </footer>
 
 <script type="module" src="./menu.js"></script>
-</body>
+<body class="home-page">
 </html>
