--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -56,17 +56,18 @@
 <body>
 
   <header class="site-header">
-    <div class="container header-top">
-      <h1 class="site-title">J L Serviços Contábeis</h1>
-      <nav class="main-nav">
-        <ul class="menu">
-          <li class="menu-item"><a href="/jl-servicos-contabeis/">Início</a></li>
-          <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
-          <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="container header-content">
+    <h1 class="site-title-header">J L Serviços Contábeis</h1>
+    
+    <nav class="main-nav">
+      <ul class="menu">
+        <li class="menu-item"><a href="../index.html">Início</a></li>
+        <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
+        <li class="menu-item"><a href="index.html" style="color: #bd9617;">LGPD</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
   <main class="container sobre-main"> 
     
