--- a/sobre/index.html
+++ b/sobre/index.html
@@ -14,14 +14,21 @@
 <body>
 
   <header class="site-header">
-  <div class="container header-content">
-    <h1 class="site-title-header">J L Serviços Contábeis</h1>
-    
+  <div class="container header-content"> 
+    <div class="brand-identity">
+      <img src="../../logo.png" alt="Logotipo JL Serviços Contábeis" class="site-logo-circle">
+      <div class="brand-text">
+        <h1 class="site-title-header">J L Serviços Contábeis</h1>
+        <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
+      </div>
+    </div>
+
     <nav class="main-nav">
       <ul class="menu">
-        <li class="menu-item"><a href="../index.html">Início</a></li>
-        <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
-        <li class="menu-item"><a href="index.html" style="color: #bd9617;">LGPD</a></li>
+        <li class="menu-item"><a href="../../index.html">Início</a></li>
+        <li class="menu-item"><a href="../index.html">Serviços</a></li>
+        <li class="menu-item"><a href="../../blog/index.html">Blog</a></li>
+        <li class="menu-item"><a href="../../sobre/index.html">Sobre</a></li>
       </ul>
     </nav>
   </div>
