--- a/servicos/index.html
+++ b/servicos/index.html
@@ -29,7 +29,7 @@
           <ul class="dropdown-menu">
             <li><a href="./mei/index.html">MEI</a></li>
             <li><a href="./pessoa-fisica/index.html">Pessoa Física</a></li>
-            <li><a href="#contabeis">Serviços Contábeis</a></li>
+            <li><a href="./contabeis/index.html">Serviços Contábeis</a></li>
             <li><a href="./certidoes-regularizacoes/index.html">Certidões</a></li>
             <li><a href="./certificado-digital/index.html">Certificado Digital</a></li>
             <li><a href="./outros/index.html">Outros</a></li>
