--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -93,7 +93,7 @@
 
     <div style="display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; margin: 40px 0;">
         <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5); display: flex; flex-direction: column;">
-            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
+            <h3 style="color:#bd9617; margin-bottom: 10px; font-family: 'Montserrat', sans-serif; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Plano Básico</h3>
             <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 99,99/mês</p>
             <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
                 <li>✔ Emissão mensal do DAS</li>
