--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -109,7 +109,7 @@
 
         <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1); display: flex; flex-direction: column; position: relative;">
             <div style="position: absolute; top: -12px; right: 20px; background: #bd9617; color: #0b1c2d; padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: 800; text-transform: uppercase;">Mais Completo</div>
-            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
+           <h3 style="color:#bd9617; margin-bottom: 10px; font-family: 'Montserrat', sans-serif; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Plano Premium</h3>
             <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px; color: #fff;">R$ 159,99/mês</p>
             <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2; padding: 0; margin-bottom: 30px;">
                 <li>✔ Tudo do Plano Básico</li>
