--- a/servico/area_do_cliente/index.html
+++ b/servico/area_do_cliente/index.html
@@ -1,21 +1,34 @@
-<div class="dashboard-container" style="max-width: 1000px; margin: 50px auto; padding: 20px; color: white;">
-    <header style="border-bottom: 1px solid #bd9617; padding-bottom: 20px; margin-bottom: 30px;">
-        <h1 id="boas-vindas" style="font-family: 'Playfair Display', serif;">Carregando...</h1>
-        <p style="color: #ccc;">Bem-vindo à sua contabilidade digital.</p>
-    </header>
-
-    <div class="grid-dashboard" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
-        <div class="card" style="background: rgba(14,42,71,0.5); border: 1px solid #bd9617; padding: 20px; border-radius: 15px;">
-            <h3 style="color: #bd9617; margin-bottom: 15px;">Meu Plano</h3>
-            <p>Status: <strong id="status-plano">Verificando...</strong></p>
-            <p style="font-size: 0.8rem; margin-top: 10px; color: #aaa;">Início: <span id="data-inicio">--/--/--</span></p>
-        </div>
-
-        <div class="card" style="background: rgba(14,42,71,0.5); border: 1px solid #bd9617; padding: 20px; border-radius: 15px;">
-            <h3 style="color: #bd9617; margin-bottom: 15px;">Ações Rápidas</h3>
-            <button style="width: 100%; padding: 10px; background: #bd9617; border: none; color: white; border-radius: 5px; cursor: pointer;">
-                Baixar Último DAS
-            </button>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Área do Cliente | JL Serviços</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        body { background-color: #0a192f; color: white; font-family: 'Montserrat', sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .login-card { background: rgba(14, 42, 71, 0.8); padding: 40px; border-radius: 15px; border: 1px solid #bd9617; width: 100%; max-width: 350px; text-align: center; }
+        h2 { font-family: 'Playfair Display', serif; color: #bd9617; margin-bottom: 30px; }
+        input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 8px; border: 1px solid #444; background: #0e2a47; color: white; box-sizing: border-box; }
+        button { width: 100%; padding: 15px; background: #bd9617; border: none; border-radius: 8px; color: white; font-weight: 700; cursor: pointer; transition: 0.3s; margin-top: 10px; }
+        button:hover { background: #d4a71c; }
+        .links { margin-top: 20px; font-size: 0.8rem; }
+        .links a { color: #ccc; text-decoration: none; }
+    </style>
+</head>
+<body>
+    <div class="login-card">
+        <h2>Área do Cliente</h2>
+        <form id="login-form">
+            <input type="email" id="email" placeholder="Seu E-mail" required>
+            <input type="password" id="password" placeholder="Sua Senha" required>
+            <button type="submit">ENTRAR</button>
+        </form>
+        <div class="links">
+            <a href="../../index.html">← Voltar para o site</a>
         </div>
     </div>
-</div>
+    <script src="cliente.js"></script>
+</body>
+</html>
