--- a/index.html
+++ b/index.html
@@ -12,36 +12,28 @@
 
 <body class="home-page">
 <header class="site-header">
-  <div class="container">
+  <div class="container header-stack"> 
     
-    <div class="header-top-row">
-      <div class="brand-identity">
-        <img src="logo.png" alt="JL Serviços" class="site-logo-circle">
-        <div class="brand-text">
-          <h1 class="site-title-header">J L Serviços Contábeis</h1>
-          <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
-        </div>
-      </div>
-
-      <div class="user-actions">
-        <a href="servicos/area_do_cliente/index.html" class="btn-area-cliente">
-          <i class="fas fa-user-circle"></i> Área do Cliente
-        </a>
+    <div class="brand-identity">
+      <img src="logo.png" alt="JL Serviços" class="site-logo-circle">
+      <div class="brand-text">
+        <h1 class="site-title-header">J L Serviços Contábeis</h1>
+        <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
       </div>
     </div>
 
-    <nav class="main-nav-row">
+    <div class="client-access-row">
+      <a href="servicos/area_do_cliente/index.html" class="btn-area-cliente">
+        <i class="fas fa-user-circle"></i> Área do Cliente
+      </a>
+    </div>
+
+    <nav class="main-nav">
       <ul class="menu">
         <li class="menu-item"><a href="index.html">Início</a></li>
         <li class="menu-item dropdown">
           <a href="servicos/index.html" class="dropdown-toggle">Serviços</a>
-          <ul class="dropdown-menu">
-            <li><a href="servicos/mei/index.html">MEI</a></li>
-            <li><a href="servicos/pessoa-fisica/index.html">Pessoa Física</a></li>
-            <li><a href="servicos/certidoes-regularizacoes/index.html">Certidões</a></li>
-            <li><a href="servicos/contabeis/index.html">Contábeis</a></li>
-          </ul>
-        </li>
+          </li>
         <li class="menu-item"><a href="blog/index.html">Blog</a></li>
         <li class="menu-item"><a href="sobre/index.html">Sobre</a></li>
         <li class="menu-item"><a href="lgpd/index.html">LGPD</a></li>
